packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/event-type-has-unknown-merge-strategy.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event structure validation, verify
if property having an unknown merge strategy is rejected
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="number:int"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" event-version="c" display-name-singular="a" display-name-plural="a" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="a" description="c" unique="true" optional="false" multivalued="false" merge="unknown"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
